# docsbot

./: .env.example  .gitignore  README.md  pyproject.toml
scripts/: discord_data.py  pipeline.yaml  qna_judgements.py  retrieval.py  slack_data.py  unify_data.py
src/docsbot/: utils.py
src/docsbot/apps/cli/: __init__.py  __main__.py  bot.py  config.py  formatter.py
src/docsbot/apps/slack/: __main__.py  bot.py  config.py  formatter.py
src/docsbot/chat/: agent_runner.py  chat.py  context.py  guardrails.py  session.py
src/docsbot/chat/prompts/: coreweave_expert.md  docsbot.md  wandb_expert.md  weave_expert.md
src/docsbot/ingestion/: chunking.py  crawlers.py  ingestion.py  preprocessors.py  vectorstore.py
src/docsbot/retriever/: __init__.py  reranker.py  retriever.py
src/docsbot/storage/: __init__.py  client.py  models.py  schemas.py
