[project]
name = "docsbot"
version = "0.1.0"
description = "A documentation bot we built for the coreweave hackathon"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.49.0",
    "asyncer>=0.0.8",
    "chromadb>=1.0.8",
    "cohere>=5.14.2",
    "crawl4ai>=0.6.2",
    "docetl[parsing]>=0.2.2",
    "ftfy>=6.3.1",
    "gitpython>=3.1.44",
    "instructor>=1.7.9",
    "jupyter>=1.1.1",
    "langchain-text-splitters>=0.3.8",
    "markdown>=3.8",
    "markdownify>=1.1.0",
    "markitdown>=0.1.1",
    "multilspy>=0.0.15",
    "nextcord>=2.6.0",
    "numpy>=2.2.4",
    "openai>=1.72.0",
    "openai-agents[litellm]>=0.0.13",
    "openapi-markdown>=0.4.3",
    "pandas>=2.2.3",
    "pymdown-extensions>=10.14.3",
    "pypandoc>=1.15",
    "slack-bolt>=1.23.0",
    "sqlalchemy>=2.0.41",
    "tree-sitter>=0.24.0",
    "tree-sitter-markdown>=0.3.2",
    "tree-sitter-python>=0.23.6",
    "unstructured>=0.17.2",
    "weave>=0.51.42",
]

[dependency-groups]
lint = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "ruff>=0.11.10",
]

[tool.uv]
default-groups =["lint"]

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.black]
line-length = 120
target-version = ["py311"]
skip-string-normalization = false

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true
force_sort_within_sections = true

[tool.ruff]
line-length = 120
target-version = "py311"
include = ["src/**/*.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
# E, F = errors, flakes; I = isort (import sort); UP = pyupgrade; B = bugbear; C4 = comprehensions; SIM = simplify

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint.isort]
# Ruff's isort compatible settings (if you want Ruff to handle imports)
known-first-party = ["docsbot"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
